--- a/CV_Hoerudin_0110220290_TI08.html
+++ b/CV_Hoerudin_0110220290_TI08.html
@@ -7,7 +7,7 @@
         <h1 align="center">HOERUDIN</h1>
         <hr size="10px" />
         <h2>PROFIL</h2>
-        <img src="foto/profil.jpg" width="180" height="200">
+        <img src="profil.jpg" width="180" height="200">
         <ul>
             <li>Tempat, Tanggal Lahir : Bogor, 30 Agustus 2002</li>
             <li>Alamat : RT 04 RW 11 JL.RTM Gg.Emurji'un No.47</li>
